--- a/minRating.html
+++ b/minRating.html
@@ -15,7 +15,19 @@
     <h1>My Bookmarks</h1>
   </header>
   <button class='button' type='button'>Add Bookmark</button>
-  <button class='button' type='button'>Minimum Rating</button>
+  <form name='minimumRating' action='' method="POST">
+    <div>
+      <select>
+        <option disabled value='minRating'>Minimum Rating</option>
+        <option value='1 star'>1 star</option>
+        <option value='2 stars'>2 stars</option>
+        <option value='3 stars'>3 stars</option>
+        <option value='4 stars'>4 stars</option>
+        <option value='5 stars'>5 stars</option>
+        <option value='clear'>Clear Ratings</option>
+      </select>
+    </div>
+  </form>
   <ul class = 'bookmarks'>
     <li>
       <p>Harry Potter & the Prisoner of Azkaban</p>
