pulls bookmarks from API, renders them on the DOM

--- a/minRating.html
+++ b/minRating.html
@@ -18,7 +18,7 @@
   <form name='minimumRating' action='' method="POST">
     <div>
       <select>
-        <option disabled value='minRating'>Minimum Rating</option>
+        <option value='minRating'>Minimum Rating</option>
         <option value='1 star'>1 star</option>
         <option value='2 stars'>2 stars</option>
         <option value='3 stars'>3 stars</option>
