--- a/home.html
+++ b/home.html
@@ -17,9 +17,31 @@
 
   <button class='button' type='button'>Add Bookmark</button>
   <button class='button' type='button'>Minimum Rating</button>
-  
   <ul class='bookmarks'>
-    
+    <li>
+      <p>Harry Potter & the Prisoner of Azkaban</p>
+      <img id='fiveStars' src='https://d30y9cdsu7xlg0.cloudfront.net/png/435814-200.png' alt='5 star rating' />
+    </li>
+    <li>
+      <p>Harry Potter & the Prisoner of Azkaban</p>
+      <img id='fiveStars' src='https://d30y9cdsu7xlg0.cloudfront.net/png/435814-200.png' alt='5 star rating' />
+    </li>
+    <li>
+      <p>Harry Potter & the Prisoner of Azkaban</p>
+      <img id='fiveStars' src='https://d30y9cdsu7xlg0.cloudfront.net/png/435814-200.png' alt='5 star rating' />
+    </li>
+    <li>
+      <p>Harry Potter & the Prisoner of Azkaban</p>
+      <img id='fiveStars' src='https://d30y9cdsu7xlg0.cloudfront.net/png/435814-200.png' alt='5 star rating' />
+    </li>
+    <li>
+      <p>Harry Potter & the Prisoner of Azkaban</p>
+      <img id='fiveStars' src='https://d30y9cdsu7xlg0.cloudfront.net/png/435814-200.png' alt='5 star rating' />
+    </li>
+    <li>
+      <p>Harry Potter & the Prisoner of Azkaban</p>
+      <img id='fiveStars' src='https://d30y9cdsu7xlg0.cloudfront.net/png/435814-200.png' alt='5 star rating' />
+    </li>
   </ul>
 
   <script type='text/javascript' src="https://cdnjs.cloudflare.com/ajax/libs/cuid/1.3.8/browser-cuid.min.js"></script>
