--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
     <h1>My Bookmarks</h1>
   </header>
 
+  <section class='js-buttons'>
+  </section>
+<!-- 
   <button class='button' type='button'>Add Bookmark</button>
-  <button class='button' type='button'>Minimum Rating</button>
-  
-  <ul class='bookmarks'>
-    
+  <button class='button' type='button'>Minimum Rating</button> -->
+
+  <ul class='js-bookmarks'> 
   </ul>
 
   <script type='text/javascript' src="https://cdnjs.cloudflare.com/ajax/libs/cuid/1.3.8/browser-cuid.min.js"></script>
