--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h1>My Bookmarks</h1>
   </header>
 
-  <section class='js-buttons'>
+  <section class='js-add-min-buttons'>
   </section>
 <!-- 
   <button class='button' type='button'>Add Bookmark</button>
