--- a/index.html
+++ b/index.html
@@ -11,22 +11,18 @@
 <body>
 
   <header role='banner'>
-    <img class='logo' src='https://upload.wikimedia.org/wikipedia/commons/thumb/d/d1/Book_designed_by_Benny_Forsberg_from_the_Noun_Project.svg/768px-Book_designed_by_Benny_Forsberg_from_the_Noun_Project.svg.png' alt='logo' />
+    <!-- <img class='logo' src='https://upload.wikimedia.org/wikipedia/commons/thumb/d/d1/Book_designed_by_Benny_Forsberg_from_the_Noun_Project.svg/768px-Book_designed_by_Benny_Forsberg_from_the_Noun_Project.svg.png' alt='logo' /> -->
     <h1>My Bookmarks</h1>
   </header>
 
-  <section class='js-add-min-buttons'>
-  </section>
-<!-- 
-  <button class='button' type='button'>Add Bookmark</button>
-  <button class='button' type='button'>Minimum Rating</button> -->
+  <main role='main'>
+    <section class='js-add-min-buttons'></section>
 
-  <ul class='js-bookmarks'> 
-  </ul>
+    <ul class='js-bookmarks'></ul>
+  </main>
 
   <script type='text/javascript' src="https://cdnjs.cloudflare.com/ajax/libs/cuid/1.3.8/browser-cuid.min.js"></script>
   <script src='https://code.jquery.com/jquery-3.3.1.min.js'></script>
-  <script type='text/javascript' src='scripts/bookmark.js'></script>
   <script type='text/javascript' src='scripts/domActions.js'></script>
   <script type='text/javascript' src='scripts/api.js'></script>
   <script type='text/javascript' src='scripts/store.js'></script>
